--- a/frontend/src/pages/search.html
+++ b/frontend/src/pages/search.html
@@ -15,8 +15,8 @@
 		<input type="search" placeholder="search" class="border-2 text-white border-spacing-4 p-3 rounded-xl w-5/6 border-blue-300 bg-white/5 backdrop-blur-lg shadow-[0_0_10px_#00FFFF]"/>
 		<div id="topbar-buttons" class="flex items-center gap-6">
 			<div class="relative group">
-				<a href="/home" data-link id="home" class="w-20 h-20 bg-transparent flex items-center justify-center rounded-full">
-					<img src="/images/Home.png" alt="" class="w-full h-full object-cover" >
+				<a href="/home" data-link class="w-20 h-9 border-2 border-[#00FFFF] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#00FFFF]/20 transition-all duration-200 shadow-[0_0_10px_#00FFFF]">
+					<span class="text-[#FFD700] font-bold text-lg">HOME</span>
 				</a>
 				<div class="absolute bottom-full mb-1 translate-y-2 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap">Home</div>
 			</div>
