bouton profil sur la page d'accueil marche

--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -46,14 +46,16 @@
 		</a>
 			<!-- Bouton Profile avec tooltip -->
 			<div class="relative group">
-				<a href="/profile/statistics" data-link id="profileBtn" type="button" class="w-14 h-14 bg-gray-200 rounded-full"></a>
+				<a href="/profile/statistics" data-link id="profileBtn" class="w-14 h-14  bg-black/20 rounded-full flex items-center justify-center border-2 border-[#B026FF] shadow-[0_0_10px_#B026FF] overflow-hidden">
+					<span class="text-black font-bold text-xl">P</span>
+				</a>
 				<div class="absolute bottom-full mb-1 translate-y-2 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap">Profile</div>
 			</div>
 		  </div>
 	</div>
 
 	<!-- Contenu -->
-	<div class="flex-1 flex flex-col items-center justify-center gap-16 mt-10 p-6 pb-5">
+	<div class="flex-1 flex flex-col items-center justify-center gap-16 mt-16 p-6 pb-5">
 		<!-- Carrousel -->
 		<div class="flex items-center gap-4 relative">
 			<button id="left-button-game" class="text-5xl text-[#00FFFF] drop-shadow-[0_0_10px_#00FFFF] hover:text-[#0f9292] transition-colors">&lt;</button>
@@ -68,7 +70,7 @@
 		</div>
 
 		<!-- Tournament Section -->
-		<div id="tournament-section" class="w-full h-[290px] border-4 mt-14 rounded-2xl border-[#00FFFF] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#00FFFF] flex flex-col items-center p-6 font-mono relative">
+		<div id="tournament-section" class="w-full h-[290px] border-4 mt-20 rounded-2xl border-[#00FFFF] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#00FFFF] flex flex-col items-center p-6 font-mono relative">
 			
 			<h2 class="text-4xl font-bold text-[#00FFFF] mb-8 drop-shadow-[0_0_10px_#00FFFF]">TOURNAMENT</h2>
 			
