plus d'erreur de certificats juste le addhistory en fin de game multi marche plus je verrai ca apres

--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -75,7 +75,7 @@
 			<h2 class="text-4xl font-bold text-[#00FFFF] mb-8 drop-shadow-[0_0_10px_#00FFFF]">TOURNAMENT</h2>
 			
 			<div class="flex items-center justify-between w-full">
-				<a href="/home/tournament/join" data-link id="join-tournament" class="bg-transparent rounded-xl ml-20 border-2 border-[#FFD700] text-[#FFD700] text-2xl font-bold py-5 px-10 hover:bg-[#FFD700]/20 transition duration-200 shadow-[0_0_10px_#FFD700]">JOIN</a>
+				<button id="join-tournament" class="bg-transparent rounded-xl ml-20 border-2 border-[#FFD700] text-[#FFD700] text-2xl font-bold py-5 px-10 hover:bg-[#FFD700]/20 transition duration-200 shadow-[0_0_10px_#FFD700]">JOIN</button>
 
 				<div class="flex items-center bg-black/40 px-8 py-4 border-2 rounded-2xl border-[#B026FF] shadow-[0_0_10px_#B026FF]">
 					<div class="w-12 h-12 rounded-full bg-black/50 border-2 border-[#B026FF]"></div>
@@ -85,7 +85,7 @@
 					</div>
 				</div>
 
-				<a href="/home/tournament/create" data-link id="create-tournament" class="bg-transparent border-2 border-[#FFD700] mr-20 rounded-xl text-[#FFD700] text-2xl font-bold py-5 px-10 hover:bg-[#FFD700]/20 transition duration-200 shadow-[0_0_10px_#FFD700]">CREATE</a>
+				<button id="create-tournament" class="bg-transparent border-2 border-[#FFD700] mr-20 rounded-xl text-[#FFD700] text-2xl font-bold py-5 px-10 hover:bg-[#FFD700]/20 transition duration-200 shadow-[0_0_10px_#FFD700]">CREATE</button>
 			</div>
 		</div>
 	</div>
