--- a/frontend/src/pages/edit_password.html
+++ b/frontend/src/pages/edit_password.html
@@ -1,8 +1,17 @@
 <div class="w-screen h-screen p-4">
-	<div class="flex justify-center gap-4 mt-3 mb-6">
-		<a id="stats-btn" href="/profile/statistics" data-link class="tab-button px-10 py-3 rounded-xl font-semibold bg-gray-200 text-gray-700 hover:bg-gray-300 transition ">Statistics</a>
-		<a id="edit-btn" href="/profile/edit" data-link class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF] text-black hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Edit profile</a>
-	</div>
+	<div class="flex items-center mb-6 relative">
+        <!-- Centre buttons container -->
+        <div class="absolute left-1/2 -translate-x-1/2 flex justify-center gap-4">
+            <a id="stats-btn" href="/profile/statistics" data-link class="tab-button px-10 py-3 rounded-xl font-semibold bg-gray-200 text-gray-700 hover:bg-gray-300 transition ">Statistics</a>
+            <a id="edit-btn" href="/profile/edit" data-link class="tab-button px-10 py-3 rounded-xl font-semibold  bg-[#00FFFF] text-black hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Edit profile</a>
+        </div>
+        <!-- Home button -->
+        <div class="ml-auto">
+            <a href="/home" data-link class="w-20 h-9 border-2 border-[#00FFFF] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#00FFFF]/20 transition-all duration-200 shadow-[0_0_10px_#00FFFF]">
+                <span class="text-[#FFD700] font-bold text-lg">HOME</span>
+            </a>
+        </div>
+    </div>
 
 	<form id="edit-password-form" action="" method="POST" class="border-4 border-blue-300  bg-white/5 backdrop-blur-lg p-6 rounded-3xl shadow-[0_0_10px_#00FFFF]  h-[calc(100%-100px)] overflow-auto">
 		<div id="" class="flex flex-col md:flex-row gap-6 h-full">
