--- a/frontend/src/pages/overall_statistics.html
+++ b/frontend/src/pages/overall_statistics.html
@@ -1,10 +1,20 @@
 <div class="w-screen h-screen p-4">
-	<div class="flex justify-center gap-4 mt-3 mb-6">
-		<a id="stats-btn" href="/profile/statistics" data-link class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF] text-black hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Statistics</a>
-		<a id="edit-btn" href="/profile/edit" data-link class="tab-button px-10 py-3 rounded-xl font-semibold bg-gray-200 text-gray-700 hover:bg-gray-300 transition">Edit profile</a>
-	</div>
+   
+    <div class="flex items-center mb-6 relative">
+        <!-- Centre buttons container -->
+        <div class="absolute left-1/2 -translate-x-1/2 flex justify-center gap-4">
+            <a id="stats-btn" href="/profile/statistics" data-link class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF] text-black hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Statistics</a>
+            <a id="edit-btn" href="/profile/edit" data-link class="tab-button px-10 py-3 rounded-xl font-semibold bg-gray-200 text-gray-700 hover:bg-gray-300 transition">Edit profile</a>
+        </div>
+        <!-- Home button -->
+        <div class="ml-auto">
+            <a href="/home" data-link class="w-20 h-9 border-2 border-[#00FFFF] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#00FFFF]/20 transition-all duration-200 shadow-[0_0_10px_#00FFFF]">
+                <span class="text-[#FFD700] font-bold text-lg">HOME</span>
+            </a>
+        </div>
+    </div>
 
-	<div id="stats-div" class="border-4 border-blue-300 rounded-3xl p-4 h-[calc(100vh-125px)] bg-white/5 backdrop-blur-sm shadow-[0_0_10px_#00FFFF] overflow-hidden flex flex-col relative">
+    <div id="stats-div" class="border-4 border-blue-300 rounded-3xl p-4 h-[calc(100vh-125px)] bg-white/5 backdrop-blur-sm shadow-[0_0_10px_#00FFFF] overflow-hidden flex flex-col relative">
 
 		<div class="flex justify-center gap-4 mb-4 relative z-10">
 			<a id="History-btn" href="/profile/statistics/history" data-link type="button" class="tab-button px-10 py-2 rounded-xl font-semibold bg-gray-200  text-gray-700 hover:bg-gray-300 transition ">History</a>
