--- a/frontend/src/pages/register.html
+++ b/frontend/src/pages/register.html
@@ -1,21 +1,32 @@
-
 <!--formulaire d'inscription-->
 
 <form id="sign-up" action="" method="POST" class="space-y-4 max-w-md w-full border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF] bg-white/5 backdrop-blur p-6 rounded-2xl">
 	<h2 class="text-2xl font-bold text-center text-[#00FFFF] drop-shadow-[0_0_10px_#00FFFF] mb-4">Sign Up to ft_transcendence</h2>
 	
 	<div>
-		<label for="sign-up-username" class="block font-semibold mb-1 text-white">Username
+		<label for="sign-up-username"  class="block font-semibold mb-1 text-white">Username
 			<span class="text-red-500">*</span>
 		</label>
-		<input id="sign-up-username" name="username" type="text" required class="w-full p-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[#00FFFF]"/>
+		<input 
+			id="sign-up-username" 
+			name="username"
+			placeholder="pseudo42"
+			minlength="3" 
+			maxlength="18" 
+			pattern="[a-zA-Z0-9_]{3,18}"
+			type="text" 
+			required 
+			class="w-full p-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[#00FFFF]"
+		/>
+		<span id="username-error" class="text-red-500 text-sm hidden">Username must be 3-18 characters long and contain only letters, numbers, underscore or hyphen</span>
 	</div>
 
 	<div>
 		<label for="sign-up-email" class="block font-semibold mb-1 text-white">Email
 			<span class="text-red-500">*</span>
 		</label>
-		<input id="sign-up-email" name="email" type="email" required class="w-full p-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[#00FFFF]"/>
+		<input id="sign-up-email" title="Enter a valid address" placeholder="your.email@exemple.com" pattern="[^\s@]+@[^\s@]+\.[^\s@]+" name="email" type="email" required class="w-full p-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[#00FFFF]"/>
+		<span id="email-error" class="text-red-500 text-sm hidden">The email address entered is not valid. Please ensure it follows a standard format (user@domain.com).</span>
 	</div>
 	
 	<div>
@@ -24,7 +35,17 @@
 		</label>
 		<div class="flex items-center">
 			<div class="relative w-full">
-				<input id="sign-up-password-input" name="password" type="password" required class="w-full p-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[#00FFFF]"/>
+				<input 
+					id="sign-up-password-input" 
+					name="password" 
+					minlength="6" 
+					placeholder="********" 
+					pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{6,}" 
+					title="Password must contain at least 6 characters, including uppercase, lowercase and number" 
+					type="password" 
+					required 
+					class="w-full p-2 pr-12 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[#00FFFF]"
+				/>
 				<button type="button" id="sign-up-password-btn" class="absolute inset-y-0 right-0 flex items-center pr-3">
 					<img id="sign-up-password-icon" src="/images/cacher.svg" class="w-6 h-10" />
 				</button>
@@ -32,15 +53,16 @@
 			<img id="badPasswordIcon" src="/images/bad.svg" class="hidden ml-2 w-6 h-6 shrink-0" />
 			<img id="goodPasswordIcon" src="/images/good.svg" class="hidden ml-2 w-6 h-6 shrink-0" />
 		</div>
+		<span id="password-error" class="text-red-500 text-sm hidden mt-1">Your password must be at least 6 characters long and include at least one lowercase letter, one uppercase letter, and one number</span>
 	</div>
 
 	<div>
-		<label for="sign-up-confirmpassword-input" class="block font-semibold mb-1 text-white">Confirm Password
+		<label for="sign-up-confirmpassword-input"  class="block font-semibold mb-1 text-white">Confirm Password
 			<span class="text-red-500">*</span>
 		</label>
 		<div class="flex items-center">
 			<div class="relative w-full">
-				<input id="sign-up-confirmpassword-input" name="confirmPassword" type="password" required class="w-full p-2 pr-12 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[#00FFFF]"/>
+				<input id="sign-up-confirmpassword-input" placeholder="********" name="confirmPassword" type="password" required class="w-full p-2 pr-12 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[#00FFFF]"/>
 				<button type="button" id="sign-up-confirmpassword-btn" class="absolute inset-y-0 right-0 flex items-center pr-3">
 					<img id="sign-up-confirmpassword-icon" src="/images/cacher.svg" class="w-6 h-10" />
 				</button>
