modif css login/register/a2f/profil, ajout du bouton create tournament qui affiche la creation de tournoi avec nom, nombre de joueurs, prive/public mdp changement page 404, fetch frontend fait (en commentaire) manque backend

--- a/frontend/src/pages/edit_password.html
+++ b/frontend/src/pages/edit_password.html
@@ -27,7 +27,7 @@
 				<div id="edit-current-password-div" class="">
 					<label class="block text-sm font-bold mb-1">current password</label>
 					<div class="relative w-full md:w-2/3">
-						<input id="edit-currentpassword-input" required type="password" placeholder="current password" class="w-full px-4 py-3 rounded-xl border border-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-400 transition"/>
+						<input id="edit-currentpassword-input" required type="password" placeholder="current password" class="w-full px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF]/30 text-white focus:outline-none  focus:border-[#00FFFF] transition"/>
 						<button type="button" id="edit-currentpassword-btn" class="absolute inset-y-0 right-0 flex items-center pr-3">
 						<img id="edit-currentpassword-icon" src="/images/cacher.svg" class="w-6 h-10" />
 						</button>
@@ -38,7 +38,7 @@
 					<label class="block text-sm font-bold mb-1">new password</label>
 					<div class="flex items-center md:w-2/3">
 						<div class="relative w-full">
-							<input id="edit-newpassword-input" required type="password" placeholder="new password" class="w-full px-4 py-3 rounded-xl border border-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-400 transition"/>
+							<input id="edit-newpassword-input" required type="password" placeholder="new password" class="w-full px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF]/30 text-white focus:outline-none focus:border-[#00FFFF] transition"/>
 							<button type="button" id="edit-newpassword-btn" class="absolute inset-y-0 right-0 flex items-center pr-3">
 							<img id="edit-newpassword-icon" src="/images/cacher.svg" class="w-6 h-10" />
 							</button>
@@ -52,7 +52,7 @@
 					<label class="block text-sm font-bold mb-1">confirm password</label>
 					<div class="flex items-center md:w-2/3">
 						<div class="relative w-full">
-							<input id="edit-confirmpassword-input" required type="password" placeholder="confirm password" class="w-full px-4 py-3 rounded-xl border border-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-400 transition"/>
+							<input id="edit-confirmpassword-input" required type="password" placeholder="confirm password" class="w-full px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF]/30 text-white focus:outline-none focus:border-[#00FFFF] transition"/>
 							<button type="button" id="edit-confirmpassword-btn" class="absolute inset-y-0 right-0 flex items-center pr-3">
 							<img id="edit-confirmpassword-icon" src="/images/cacher.svg" class="w-6 h-10" />
 							</button>
