--- a/frontend/src/pages/edit_info.html
+++ b/frontend/src/pages/edit_info.html
@@ -27,12 +27,12 @@
 			<div class="md:w-2/3 mt-20 space-y-5">
 				<div id="edit-username-div" >
 					<label class="block text-sm font-bold mb-1">EDIT USERNAME</label>
-					<input id="edit-username-input" type="text" placeholder="pseudo actuel" class="w-full md:w-2/3 px-4 py-3 rounded-xl border border-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-400 transition"/>
+					<input id="edit-username-input" type="text" placeholder="pseudo actuel" class="w-full md:w-2/3 px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF]/30 text-white  focus:outline-none  focus:border-[#00FFFF] transition"/>
 				</div>
 				
 				<div id="edit-email-div" >
 					<label class="block text-sm font-bold mb-1">EDIT EMAIL</label>
-					<input id="edit-email-input" type="email" placeholder="email actuel" class="w-full md:w-2/3 px-4 py-3 rounded-xl border border-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-400 transition"/>
+					<input id="edit-email-input" type="email" placeholder="email actuel" class="w-full md:w-2/3 px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF]/30 text-white focus:outline-none  focus:border-[#00FFFF] transition"/>
 				</div>
 				
 				<div class="flex items-center md:w-2/3">
