frontend error politique de mpd pour edit mdp

--- a/frontend/src/pages/register.html
+++ b/frontend/src/pages/register.html
@@ -8,9 +8,9 @@
 			<span class="text-red-500">*</span>
 		</label>
 		<input 
-			id="sign-up-username" 
+			id="sign-up-username"
 			name="username"
-			placeholder="pseudo42"
+			placeholder="Pseudo_42"
 			minlength="3" 
 			maxlength="18" 
 			pattern="[a-zA-Z0-9_]{3,18}"
