--- a/frontend/src/pages/edit_info.html
+++ b/frontend/src/pages/edit_info.html
@@ -25,14 +25,16 @@
 	
 			<!-- Partie droite (formulaire) -->
 			<div class="md:w-2/3 mt-20 space-y-5">
-				<div id="edit-username-div" >
-					<label class="block text-sm font-bold mb-1">EDIT USERNAME</label>
-					<input id="edit-username-input" type="text" placeholder="pseudo actuel" class="w-full md:w-2/3 px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF]/30 text-white  focus:outline-none  focus:border-[#00FFFF] transition"/>
+				<div id="edit-username-div" class="flex flex-col">
+					<label class="block text-sm font-bold mb-1 text-white">EDIT USERNAME</label>
+					<input id="edit-username-input" type="text" minlength="3" maxlength="18" pattern="[a-zA-Z0-9_]{3,18}" placeholder="Pseudo_42" class="w-full md:w-2/3 px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF]/30 text-white  focus:outline-none  focus:border-[#00FFFF] transition"/>
+					<span id="edit-username-error" class="text-red-500 text-sm hidden">Username must be 3-18 characters long and contain only letters, numbers, underscore or hyphen</span>
 				</div>
 				
-				<div id="edit-email-div" >
-					<label class="block text-sm font-bold mb-1">EDIT EMAIL</label>
-					<input id="edit-email-input" type="email" placeholder="email actuel" class="w-full md:w-2/3 px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF]/30 text-white focus:outline-none  focus:border-[#00FFFF] transition"/>
+				<div id="edit-email-div" class="flex flex-col">
+					<label class="block text-sm font-bold mb-1 text-white">EDIT EMAIL</label>
+					<input id="edit-email-input" pattern="[^\s@]+@[^\s@]+\.[^\s@]+" type="email" title="Enter a valid address" placeholder="your.email@exemple.com" class="w-full md:w-2/3 px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF]/30 text-white focus:outline-none  focus:border-[#00FFFF] transition"/>
+					<span id="edit-email-error" class="text-red-500 text-sm hidden">The email address entered is not valid. Please ensure it follows a standard format (user@domain.com).</span>
 				</div>
 				
 				<div class="flex items-center md:w-2/3">
