--- a/frontend/src/pages/edit_password.html
+++ b/frontend/src/pages/edit_password.html
@@ -25,36 +25,37 @@
 			<!-- Partie droite (formulaire) -->
 			<div class="md:w-2/3 mt-20 space-y-5">
 				<div id="edit-current-password-div" class="">
-					<label class="block text-sm font-bold mb-1">current password</label>
+					<label class="block text-sm font-bold mb-1 text-white">current password</label>
 					<div class="relative w-full md:w-2/3">
-						<input id="edit-currentpassword-input" required type="password" placeholder="current password" class="w-full px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF]/30 text-white focus:outline-none  focus:border-[#00FFFF] transition"/>
+						<input id="edit-currentpassword-input" required type="password" placeholder="********" class="w-full px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF]/30 text-white focus:outline-none  focus:border-[#00FFFF] transition"/>
 						<button type="button" id="edit-currentpassword-btn" class="absolute inset-y-0 right-0 flex items-center pr-3">
-						<img id="edit-currentpassword-icon" src="/images/cacher.svg" class="w-6 h-10" />
+						<img id="edit-currentpassword-icon" src="/images/closerobot.png" class="size-12 drop-shadow-[0_0_10px_#FF007A]" />
 						</button>
 					</div>
 				</div>
 	
 				<div id="edit-new-password-div">
-					<label class="block text-sm font-bold mb-1">new password</label>
+					<label class="block text-sm font-bold mb-1 text-white">new password</label>
 					<div class="flex items-center md:w-2/3">
 						<div class="relative w-full">
-							<input id="edit-newpassword-input" required type="password" placeholder="new password" class="w-full px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF]/30 text-white focus:outline-none focus:border-[#00FFFF] transition"/>
+							<input id="edit-newpassword-input" title="Password must contain at least 6 characters, including uppercase, lowercase and number" required type="password" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{6,}" placeholder="********" class="w-full px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF]/30 text-white focus:outline-none focus:border-[#00FFFF] transition"/>
 							<button type="button" id="edit-newpassword-btn" class="absolute inset-y-0 right-0 flex items-center pr-3">
-							<img id="edit-newpassword-icon" src="/images/cacher.svg" class="w-6 h-10" />
+								<img id="edit-newpassword-icon" src="/images/closerobot.png" class="size-12 drop-shadow-[0_0_10px_#FF007A]" />
 							</button>
 						</div>
 						<img id="profile-badPasswordIcon" src="/images/bad.svg" class="hidden ml-2 w-6 h-6 shrink-0" />
 						<img id="profile-goodPasswordIcon" src="/images/good.svg" class="hidden ml-2 w-6 h-6 shrink-0" />
 					</div>
+					<span id="edit-password-error" class="text-red-500 text-sm hidden mt-1">Your password must be at least 6 characters long and include at least one lowercase letter, one uppercase letter, and one number</span>
 				</div>
 		
 				<div id="edit-confirm-new-password-div">
-					<label class="block text-sm font-bold mb-1">confirm password</label>
+					<label class="block text-sm font-bold mb-1 text-white">confirm password</label>
 					<div class="flex items-center md:w-2/3">
 						<div class="relative w-full">
-							<input id="edit-confirmpassword-input" required type="password" placeholder="confirm password" class="w-full px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF]/30 text-white focus:outline-none focus:border-[#00FFFF] transition"/>
+							<input id="edit-confirmpassword-input" required type="password" placeholder="********" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{6,}" class="w-full px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF]/30 text-white focus:outline-none focus:border-[#00FFFF] transition"/>
 							<button type="button" id="edit-confirmpassword-btn" class="absolute inset-y-0 right-0 flex items-center pr-3">
-							<img id="edit-confirmpassword-icon" src="/images/cacher.svg" class="w-6 h-10" />
+							<img id="edit-confirmpassword-icon" src="/images/closerobot.png" class="size-12 drop-shadow-[0_0_10px_#FF007A]" />
 							</button>
 						</div>
 						<img id="profile-badConfirmPasswordIcon" src="/images/bad.svg" class="hidden ml-2 w-6 h-6 shrink-0" />
