--- a/frontend/src/pages/search.html
+++ b/frontend/src/pages/search.html
@@ -30,14 +30,16 @@
 
 	<div class="h-full rounded-2xl m-3 p-2 flex flex-col border-4 border-[#00FFFF] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#00FFFF]">
 		<div class="flex justify-center gap-4 mt-2 mb-6">
-			<a data-link id="global-btn-search" class="bg-transparent border-2 border-[#FFD700] px-10 py-3 rounded-xl text-[#FFD700] font-bold hover:bg-[#FFD700]/20 transition duration-200 shadow-[0_0_10px_#FFD700]">Overall
-			</a>
+			<a data-link id="global-btn-search" class="bg-transparent border-2 border-[#FFD700] px-10 py-3 rounded-xl text-[#FFD700] font-bold hover:bg-[#FFD700]/20 transition duration-200 shadow-[0_0_10px_#FFD700]">Overall</a>
 			<a data-link id="history-btn-search" class="bg-transparent border-2 border-[#00FFFF] px-10 py-3 rounded-xl text-[#00FFFF] font-bold hover:bg-[#00FFFF]/20 transition duration-200 shadow-[0_0_10px_#00FFFF]">History</a>
 		</div>
 
 		<div class="flex-1 relative flex items-center justify-center">
 			<div id="global-div-search" 
 				class="bg-black/30 w-full h-full rounded-xl border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
+			</div>
+			<div id="history-div-search" 
+				class="hidden w-full h-[75vh] space-y-6 overflow-y-auto p-6 bg-black/30 rounded-xl border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF] mx-auto">
 			</div>
 		</div>
 	</div>
