bouton register test, et pop up quand on s'inscrit se connecte, pour certaines erreur

--- a/frontend/src/pages/login.html
+++ b/frontend/src/pages/login.html
@@ -29,6 +29,10 @@
 
 	<button type="submit" class="w-full border-2 border-[#00FFFF] bg-transparent text-[#00FFFF] font-bold  hover:bg-[#0f9292]/20 transition duration-200 px-4 py-2 rounded-lg shadow-[0_0_10px_#00FFFF]">Sign In</button>
 	<div class="flex justify-end mt-4">
-		<a href="/register" data-link id="to-sign-up" class="hover:underline cursor-pointer text-[#00FFFF] font-bold ">Sign Up</span>
-	</div>
+        <button type="button" id="to-sign-up-button" class="hover:underline cursor-pointer text-[#00FFFF] font-bold ">Sign Up</button>
+    </div>
+
+    <div class="flex justify-center mt-2"> 
+        <button id="register-test-user" class="w-auto px-6 py-2 border-2 border-pink-500 bg-pink-500/10 text-pink-500 font-bold hover:bg-pink-500/30 transition duration-200 rounded-lg shadow">Register Test User</button>
+    </div>
 </form>
