--- a/frontend/src/pages/edit_info.html
+++ b/frontend/src/pages/edit_info.html
@@ -20,7 +20,7 @@
 			
 				<div class="flex flex-col items-center mt-10 md:w-1/3">
 				<div class="size-80 bg-gray-600 rounded-full mb-4"></div>
-				<button type="profile" id="button-edit-profile" class="bg-gray-200 px-8 py-6 rounded-2xl text-sm">EDIT Profile picture</button>
+				<button type="button" id="button-edit-profile" class="bg-gray-200 px-8 py-6 rounded-2xl text-sm">EDIT Profile picture</button>
 			</div>
 	
 			<!-- Partie droite (formulaire) -->
