database tournament 0 -> ?, bonne couleur pour les tournois, bouton play qui s'affiche et bouton resign (pas obliger de faire donc a voir)

--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -109,6 +109,11 @@
 					<button id="join-tournament"
 						class="bg-transparent rounded-xl ml-20 border-2 border-[#FFD700] text-[#FFD700] text-2xl font-bold py-5 px-10 hover:bg-[#FFD700]/20 transition duration-200 shadow-[0_0_10px_#FFD700]">JOIN</button>
 					<div id="tournament-view" class="flex flex-col items-center justify-center w-[600px] -mt-4">
+						<div id="default-tournament-view" class="flex flex-col items-center gap-4">
+							<img src="/images/pong_racquet.png" alt="pong racquet" class="w-16 h-16 mb-2" />
+							<p class="text-[#00FFFF]/90 text-xl font-bold text-center">No tournament in progress</p>
+							<p class="text-[#00FFFF]/80 text-sm">Create or join a tournament to start playing</p>
+						</div>
 					</div>
 					<button id="create-tournament"
 						class="bg-transparent border-2 border-[#FFD700] mr-20 rounded-xl text-[#FFD700] text-2xl font-bold py-5 px-10 hover:bg-[#FFD700]/20 transition duration-200 shadow-[0_0_10px_#FFD700]">CREATE</button>
