--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -100,7 +100,7 @@
 			<div id="tournament-main-view" class="w-full h-full flex flex-col">
 				<h2 class="text-4xl font-bold text-[#00FFFF] mb-8 drop-shadow-[0_0_10px_#00FFFF] text-center">TOURNAMENT</h2>
 
-				<div class="flex-1 flex items-center justify-center gap-64">
+				<div id="tournament-div" class="flex-1 flex items-center justify-between">
 					<button id="join-tournament"
 						class="bg-transparent rounded-xl ml-20 border-2 border-[#FFD700] text-[#FFD700] text-2xl font-bold py-5 px-10 hover:bg-[#FFD700]/20 transition duration-200 shadow-[0_0_10px_#FFD700]">JOIN</button>
 					<div id="tournament-view" class="flex flex-col items-center justify-center w-[600px] -mt-4">
