reglage de de plusieurs petit bug, et pop error si pas de token

--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -43,15 +43,11 @@
 	</div>
 
 	<!-- Input area -->
-	<div class="flex items-center gap-2 w-full border-t border-[#00FFFF] pt-2 bg-black/40">
+	<div id="input-Area" class="flex items-center gap-2 w-full border-t border-[#00FFFF] pt-2 bg-black/40">
 		<span class="text-[#00FFFF] animate-pulse">></span>
 		<input id="chat-input" type="text" placeholder="Enter command..." maxlength="512"
 			class="bg-transparent p-2 text-[#00FFFF] flex-grow min-w-0 border-none focus:outline-none focus:ring-0 placeholder-[#00FFFF]/50" />
 		<button id="chat-send" class="text-[#00FFFF] hover:text-white transition-colors px-2">⮐</button>
-		<button id="pong-send"
-			class="w-8 h-8 rounded flex items-center justify-center hover:bg-[#00FFFF]/10 transition-colors">
-			<img src="/images/pong_racquet.png" alt="" class="w-6 h-6">
-		</button>
 	</div>
 </div>
 
