--- a/frontend/src/pages/edit_info.html
+++ b/frontend/src/pages/edit_info.html
@@ -19,7 +19,7 @@
 				<!-- Partie gauche (image) -->
 			
 				<div class="flex flex-col items-center mt-10 md:w-1/3">
-				<div class="size-80 bg-gray-600 rounded-full mb-4"></div>
+				<div id= "profil-pic" class="size-80 bg-gray-600 rounded-full mb-4"></div>
 				<input type="file" id="pictureInput" accept="image/*" />
 				<button type="button" id="button-edit-profile" class="bg-gray-200 px-8 py-6 rounded-2xl text-sm">EDIT Profile picture</button>
 			</div>
