--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -1,16 +1,16 @@
 <!-- Chat area -->
 <div class="w-1/4 min-w-[200px] rounded-2xl m-5 p-4 flex flex-col border-4 border-[#B026FF] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#B026FF] font-mono relative">
 	<div class="flex items-center justify-between mb-4 border-b border-[#FF0F4D] pb-2">
-		<div id="chat-info" data-i18n="chat_global" class="text-[#ad39f0] font-bold flex items-center">
+		<div id="chat-info" class="text-[#ad39f0] font-bold flex items-center">
 			<span class="mr-2 text-[#FF2E9F]">⚡</span>
-			CHAT://global
+			<span data-i18n="chat_global">CHAT://global</span>
 			<span class="ml-2 animate-pulse text-[#FF2E9F]">_</span>
 		</div>
 
 		<div class="relative">
 			<button id="switch-chat"
 				class="group text-[#ad39f0] opacity-40 z-10 font-bold flex items-center hover:text-[#FF2E9F] hover:opacity-100 transition-colors duration-200">
-				CHAT://friends
+				<span data-i18n="chat_friends">CHAT://friends</span>
 				<div id="tooltip-switch-chat" data-i18n="switch_to_friends" class="absolute -top-8 left-1/2 -translate-x-1/2 bg-black/80 text-[#FF2E9F] text-xs px-2 py-1 rounded 
 					opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap 
 					border border-[#FF2E9F] pointer-events-none">
@@ -134,7 +134,7 @@
 					<button id="back-to-tournament"
 						class="bg-transparent rounded-xl ml-20 border-2 border-[#00FFFF] text-[#00FFFF] text-2xl font-bold py-5 px-10 hover:bg-[#00FFFF]/20 transition duration-200 shadow-[0_0_10px_#00FFFF]" data-i18n="back">BACK</button>
 					<div class="flex flex-col items-center gap-4">
-						<input type="text" id="tournament-name" placeholder="Tournament Name" maxlength="20"
+						<input type="text" id="tournament-name" data-i18n-placeholder="tournament_name" placeholder="Tournament Name" maxlength="14"
 							class="bg-black/40 border-2 border-[#00FFFF] text-[#00FFFF] rounded-xl p-2 w-64 focus:outline-none focus:border-[#FFD700]" />
 						<div class="flex items-center gap-8">
 							<div class="flex items-center gap-4">
@@ -147,7 +147,7 @@
 								<label class="flex items-center gap-2">
 									<input type="radio" name="type" value="private"
 										class="text-[#FFD700] accent-[#FFD700]">
-									<span class="text-[#00FFFF]" data-i18n="privtae">Private</span>
+									<span class="text-[#00FFFF]" data-i18n="private">Private</span>
 								</label>
 							</div>
 						</div>
